--- a/arch/arm64/configs/nabu_defconfig
+++ b/arch/arm64/configs/nabu_defconfig
@@ -51,10 +51,12 @@ CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_MODULES=y
+CONFIG_MODULE_LOAD=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=Y
 CONFIG_MODVERSIONS=y
-# CONFIG_MODULE_SIG is not set
+CONFIG_MODULE_SIG=n
 # CONFIG_MODULE_SIG_FORCE is not set
 # CONFIG_MODULE_SIG_SHA512 is not set
 # CONFIG_BLK_DEV_BSG is not set
