--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: kernel-zip
-        path: out/*.zip
+        path: $KERNEL_ROOT_DIR"/out/*.zip
